--- a/ch08_sentiment_analysis/ch08_sentiment_analysis.ipynb
+++ b/ch08_sentiment_analysis/ch08_sentiment_analysis.ipynb
@@ -6,18 +6,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Conda3\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
-      "C:\\Conda3\\lib\\site-packages\\sklearn\\grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
-      "  DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "chapter 08\n",
@@ -34,10 +23,10 @@
     "from nltk.corpus import stopwords \n",
     "\n",
     "from sklearn.feature_extraction.text import HashingVectorizer, CountVectorizer, TfidfVectorizer, TfidfTransformer\n",
-    "from sklearn.grid_search import GridSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.linear_model import SGDClassifier\n"
+    "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
+    "\n"
    ]
   },
   {
@@ -92,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +125,7 @@
        "2  ***SPOILER*** Do not read this, if you think a...          0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +217,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>in 1974 the teenager martha moxley maggie grac...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ok so i really like kris kristofferson and his...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>spoiler do not read this if you think about w...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review  sentiment\n",
+       "0  in 1974 the teenager martha moxley maggie grac...          1\n",
+       "1  ok so i really like kris kristofferson and his...          0\n",
+       "2   spoiler do not read this if you think about w...          0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df after preprocessing \n",
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -262,19 +307,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "# logistic regression for document classification \n",
-    "\n",
     "# training data and test data\n",
     "X_train = df.loc[:25000, 'review'].values\n",
     "y_train = df.loc[:25000, 'sentiment'].values\n",
     "X_test = df.loc[25000:, 'review'].values\n",
-    "y_test = df.loc[25000:, 'sentiment'].values\n",
+    "y_test = df.loc[25000:, 'sentiment'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 48 candidates, totalling 240 fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "# slow !!!\n",
     "\n",
     "# use a GridSearchCV object to find the optimal set of parameters \n",
     "tfidf = TfidfVectorizer(strip_accents=None, lowercase=False, preprocessor=None)\n",
@@ -314,18 +377,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0%                          100%\n",
+      "[##############################] | ETA: 00:00:00\n",
+      "Total time elapsed: 00:00:35\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.867\n"
+     ]
+    }
+   ],
    "source": [
     "# stochastic gradient descent\n",
     "\n",
     "\n",
     "# reads in and returns one document at a time\n",
     "def stream_docs(path):\n",
-    "    with open(path, 'r') as csv:\n",
+    "    with open(path, 'r', encoding='utf-8', errors='ignore') as csv:\n",
     "        next(csv) # skip header\n",
     "        for line in csv:\n",
     "            text, label = line[:-3], int(line[-2])\n",
@@ -337,14 +417,14 @@
     "# specified by the size parameter            \n",
     "def get_minibatch(doc_stream, size):\n",
     "    docs, y = [], []\n",
-    "        try:\n",
-    "            for _ in range(size):\n",
-    "                text, label = next(doc_stream)\n",
-    "                docs.append(text)\n",
-    "                y.append(label)\n",
-    "        except StopIteration:\n",
-    "            return None, None\n",
-    "        return docs, y\n",
+    "    try:\n",
+    "        for _ in range(size):\n",
+    "            text, label = next(doc_stream)\n",
+    "            docs.append(text)\n",
+    "            y.append(label)\n",
+    "    except StopIteration:\n",
+    "        return None, None\n",
+    "    return docs, y\n",
     "    \n",
     "# out of core learning     \n",
     "vect = HashingVectorizer(decode_error='ignore', \n",
@@ -373,6 +453,39 @@
     "\n",
     "# use the last 5000 documents to update the model \n",
     "clf = clf.partial_fit(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "chapter 9\n",
+    "\"\"\"\n",
+    "\n",
+    "# dump clf as pickle file \n",
+    "\n",
+    "import pickle \n",
+    "import os \n",
+    "\n",
+    "# make file path \n",
+    "dest = os.path.join('movieclassifier', 'pkl_objects')\n",
+    "if not os.path.exists(dest):\n",
+    "    os.makedirs(dest) \n",
+    "    \n",
+    "# dump the stopwords     \n",
+    "pickle.dump(stop, \n",
+    "         open(os.path.join(dest, 'stopwords.pkl'),'wb'),\n",
+    "         protocol=4)   \n",
+    "\n",
+    "# dump the classifier\n",
+    "pickle.dump(clf,\n",
+    "         open(os.path.join(dest, 'classifier.pkl'), 'wb'),\n",
+    "         protocol=4)"
    ]
   },
   {
